[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.14.1", features = ["full"] }
tonic = { version = "0.14.2", features = ["tls-native-roots", "tls-ring"] }
bytes = "1.10.1"
futures = "0.3.31"
yellowstone-grpc-client = "9.0.0"
yellowstone-grpc-proto = "9.0.0"
tonic-health = "0.14.2"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
bs58 = "0.4"
store = { path = "../store" }
